fix: unscrollable header menu on safari ios

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -77,6 +77,7 @@
 	left: 0;
 	right: 0;
 	height: 0;
+	min-height: 100vh;
 	background: lib.$color-background;
 
 	@include lib.layout-full-width-container;
